@@ -1346,23 +1346,6 @@ public class Movie extends MediaEntity {
    * @return the nfo filename
    */
   public String getNfoFilename(MovieNfoNaming nfo, String newMovieFilename) {
-    if (isDisc) {
-      // detect if this directory is a DVD or BR directory
-      File dir = new File(path, "VIDEO_TS");
-      if (dir.exists()) {
-        // we need to pass the subdir in this case
-        // info for that file naming: http://wiki.xbmc.org/index.php?title=NFO_files/movies
-        return "VIDEO_TS" + File.separator + "VIDEO_TS.nfo";
-      }
-
-      dir = new File(path, "BDMV");
-      if (dir.exists()) {
-        // we need to pass the subdir in this case
-        // info for that file naming: http://forum.xbmc.org/showthread.php?tid=155523
-        return "BDMV" + File.separator + "index.nfo";
-      }
-    }
-
     String filename = "";
     switch (nfo) {
       case FILENAME_NFO:
@@ -1371,6 +1354,22 @@ public class Movie extends MediaEntity {
         break;
       case MOVIE_NFO:
         filename += "movie.nfo";
+        break;
+      case DISC_NFO:
+        // detect if this directory is a DVD or BR directory
+        // info for that file naming: http://wiki.xbmc.org/index.php?title=NFO_files/movies
+        File dir = new File(path, "VIDEO_TS.ifo");
+        if (dir.exists()) {
+          return "VIDEO_TS.nfo";// DVD w/o video_ts folder
+        }
+        dir = new File(path, "VIDEO_TS");
+        if (dir.exists() && dir.isDirectory()) {
+          return "VIDEO_TS" + File.separator + "VIDEO_TS.nfo";
+        }
+        dir = new File(path, "BDMV");
+        if (dir.exists() && dir.isDirectory()) {
+          return "BDMV" + File.separator + "index.nfo";
+        }
         break;
       default:
         filename = "";
